[package]
name = "mux_attrs"
version = "0.1.0"
edition = "2024"

authors = ["Alexey Gerasev <alexey.gerasev@gmail.com>"]
homepage = "https://github.com/agerasev/mux_attrs"
repository = "https://github.com/agerasev/mux_attrs.git"
readme = "README.md"
license = "MIT/Apache-2.0"
description = "Attribute multiplexing"
documentation = "https://docs.rs/mux_attrs"
keywords = ["attribute", "multiplexing"]
categories = ["data-structures", "development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "2.0", features = ["visit-mut"] }
